htdocs/theme/raw/sass/_custom.scss
/* ... */
// Removes weird text node between buttons on admin/users/suspended.php
.pieform-fieldset.btn-group {
    font-size: 0;
}

.elasticsearch-filters {
    border-bottom: 1px solid $card-border-color;
    background-color: $card-header-bg;
}

// Mostly used to make the table matrix popups work
.d-none.popover {
    visibility: hidden;
}

// Notifications search and bulk action select alignment
.form-inline {
    input {
        @extend .form-control;
        &.btn-primary {
            @extend .btn-primary;
        }
    }
}
.notification-parent {
    .bulk-actions {
        input {
            margin-top: 1px;
        }
        button {
            height: calc(2.0625rem + 2px);
        }
    }
}

// Share with me search filter
#search_share_container {
    label {
        margin-top: 13px;
    }
}

// Find groups search
#search_searchfield {
    color: $btn-primary-color;
    background-color: $btn-primary-bg;
    border: $btn-primary-border;
    border-radius: $border-radius;
    width: auto;
    margin-top: 12px;
}

// Find people results approve request alignment
.approvefriend .pieform {
    display: inline-block;
    margin-left: 3px;
    button {
        font-size: $font-size-sm;
    }
}

// Manage collections
.collection-pages {
    button.btn-sm {
        border: 0;
    }
}

// Networking delete btn
.secondary #networkingform_submit {
    background-color: $state-danger-bg;
    color: $state-danger-text;
    border-color: $state-danger-border;
    margin-left: .5rem;
}

// Web services add service groups btn
#webservices_function_groups_add_submit,
#webservices_token_generate_submit {
    width: auto;
}

// Backup for libraries that still need hidden class instead of bootstrap 4s new .d-none
.hidden {
    display: none;
}
//used for Smart Evidence json-editor
#editor_holder .bg-light {
    background-color: #FFF !important;
}

div.form-group .form-control-label {
    vertical-align: top;
}

.btn-group {
    font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
}

.json_editor_btn_add .btn-group > .btn-group:not(:last-child) > .btn, .btn-group > .btn:not(:last-child):not(.dropdown-toggle) {
    border-top-right-radius: 0.25rem;
    border-bottom-right-radius: 0.25rem;
}

.errormsg {
    color: $state-danger-text;
}

// table cells that need to be fixed 70px width
.width-70 {
    width: 70px;
}

// Forum select wrap too close to text
.forumselectwrap {
    margin: 0 0 10px 10px;
}

.form-group.checkboxes .group-invite input[type="checkbox"] {
    float: left;
    top: 0;
    margin-right: 5px;
}

// Keep content chooser on side of page when scrolling
#editcontent-sidebar-wrapper {
    position: -webkit-sticky;
    position: sticky;
    top: 200px;
}

